--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -16,17 +16,20 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <Rectangle Name="DateChooserRect" Grid.Row="0" Fill="LemonChiffon" Height="NaN" Stroke="Orchid"  Margin="266,0,266,399" Width="NaN"></Rectangle>
-        <TextBlock Name="DateChooserText" Grid.Row="0" Text="Please choose your birthday" FontFamily="Century Gothic" FontSize="18" HorizontalAlignment="Center" Height="NaN" Margin="0,0,0,414"></TextBlock>
-        <DatePicker Name="DateChooser" Height="25" Margin="201,72,201,337" Width="NaN" FontFamily="Century Gothic" />
-        <Rectangle Name="AgeRect" Fill="PapayaWhip" Height="NaN" Stroke="Orchid" Margin="201,133,201,275" Width="NaN"/>
-        <TextBlock Name="Age" Grid.Row="0" Text="Your age:" FontFamily="Century Gothic" FontSize="14" HorizontalAlignment="Center" Height="NaN" Margin="0,136,0,278" Width="377"></TextBlock>
-        <Rectangle Name="ChinaZodiRect" Fill="MistyRose" Height="NaN" Stroke="Orchid" Margin="608,204,30,170" Width="NaN"/>
-        <TextBlock Name ="ChinaZodi" Grid.Row="0" Text="China zodiac sign : " FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="608,205,0,171" Width="162"></TextBlock>
-        <Rectangle Name="WesternZodiRect" Fill="MistyRose" Height="NaN" Stroke="Orchid" Margin="30,204,608,170" Width="NaN"/>
-        <TextBlock Name="WesternZodi" Grid.Row="0" Text="Western zodiac sign : " FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="30,204,0,170" Width="162"/>
-        <Button Name="ExitButton" Content="Exit" Height="NaN" Margin="741,0,0,425" Width="NaN" Click="ExitButton_Click"></Button>
-        <Button Name="CalculateButton" Content="Calculate" Height="NaN" Margin="619,80,96,345" Width="NaN" Click="CalculateButton_Click"></Button>
-
+        <DatePicker Name="DateChooser" FontSize="12" Margin="10,161,478,282" Width="NaN" FontFamily="Century Gothic" SelectedDate="{Binding BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <Rectangle Name="AgeRect" Fill="PapayaWhip" Height="NaN" Stroke="Orchid" Margin="13,209,389,58" Width="NaN"/>
+        <TextBlock Name="Age" Grid.Row="0" Text="{Binding AgeText}" FontFamily="Century Gothic" FontSize="14" HorizontalAlignment="Left" Height="NaN" Margin="24,211,0,68" Width="376"></TextBlock>
+        <Rectangle Name="ChinaZodiRect" Fill="MistyRose" Height="NaN" Stroke="Orchid" Margin="608,210,30,164" Width="NaN"/>
+        <TextBlock Name ="ChinaZodi" Grid.Row="0" Text="{Binding ChineseSign, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="608,211,0,165" Width="162"></TextBlock>
+        <Rectangle Name="WesternZodiRect" Fill="MistyRose" Height="NaN" Stroke="Orchid" Margin="427,209,211,166" Width="NaN"/>
+        <TextBlock Name="WesternZodi" Grid.Row="0" Text="{Binding SunSign, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="427,209,0,166" Width="162"/>
+        <Button Name="Proceed" Content="Proceed" Height="NaN" Margin="352,165,352,282" Width="NaN" Command="{Binding Submitting}"></Button>
+        <TextBlock Name="EnterFirst" Grid.Row="0" Text="Enter first name : " FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="10,0,0,452" Width="162"/>
+        <TextBlock Name="EnterLast" Grid.Row="0" Text="Enter last name : "  FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="10,46,0,406" Width="162"/>
+        <TextBlock Name="EnterEmail" Grid.Row="0" Text="Enter email : " FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="10,93,0,360" Width="162"/>
+        <TextBlock Name="EnterBirth" Grid.Row="0" FontFamily="Century Gothic" FontSize="12" HorizontalAlignment="Left" Height="NaN" Margin="10,141,0,312" Width="162"><Run Text="Enter "/><Run Text="birthdate : "/></TextBlock>
+        <TextBox Name="FirstName" FontFamily="Century Gothic" FontSize="12" Text="{Binding FirstName, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Height="23" Margin="0,21,0,0" VerticalAlignment="Top" Width="780"/>
+        <TextBox Name="LastName" FontFamily="Century Gothic" FontSize="12" Text="{Binding LastName, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Height="23" Margin="0,65,0,0" VerticalAlignment="Top" Width="780"/>
+        <TextBox Name="Email" FontFamily="Century Gothic" FontSize="12" Text="{Binding Email, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Height="23" Margin="0,113,0,0" VerticalAlignment="Top" Width="780"/>
     </Grid>
 </Window>
